--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div id="container">
        <header class="header-side">
          <div class="logo-side">
-            <img src="photo/logo.png" alt="Logo Umbrella"><h2>- Jakiś przykładowy podtext.</h2> 
+            <img src="photo/logo.png" alt="Logo Umbrella"><h2>- Lorem ipsum dolor sit amet.</h2> 
          </div>
           <nav class="nav-bar">
               <ul>
@@ -28,7 +28,7 @@
            <section class="s-about-us">
               
               <div class="main-text">
-                  <h2>Umbrella- coś tam coś.</h2>
+                  <h2>Umbrella - lorem ipsum dolor.</h2>
                   <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore enim corporis fugiat, repudiandae omnis culpa, voluptate doloremque minima eos numquam minus, consequatur illum dolorum magni voluptas nemo ab corrupti sapiente.</span><span>Ipsam mollitia amet adipisci a asperiores accusantium aperiam impedit fugit, quas ullam distinctio magni, enim libero delectus quis veritatis rerum facilis nostrum architecto repellat perspiciatis at quibusdam. Assumenda, error, sunt.</span></p>
                   
               </div>
